[tool.poetry]
name = "python-click"
version = "0.1.0"
description = "BGG API command line tool"
authors = ["Peter Kufahl <pkufahl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.3"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
